2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/roach.c (roach_wait): pass entering_sc to the hook, not the
	possibly uninitialized ctx->entering_sc.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/syscall_names.c (std_syscalls): New global.
	(__SYSCALL): Macro defined in order to build the members of
	std_syscalls including asm/unistd.h.
	(syscall_names_initialize): Register the syscalls in std_syscalls
	into the hash.
	(register_name): Function deleted.
	* src/Makefile.am (syscall_names.c.inc): Rule deleted.
	(BUILT_SOURCES): Deleted.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/Makefile.am (BUILT_SOURCES): syscall_names.c.inc is
	automatically generated.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/syscall_names.c: Added a file header.

2015-04-03  Giuseppe Scrivano  <gscrivan@redhat.com>

	* tests/Makefile.am (LDADD): Fix order.

	* src/roach.h (roach_reg_syscalls): New function.
	* src/roach.c (roach_reg_syscalls): Likewise.
	(roach_reg_syscall): Use the new function.

2015-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* src/plugins/fail_mem/Makefile.am (AM_CFLAGS): Use $(srcdir).
	* src/plugins/Makefile.am (AM_CFLAGS): Likewise.

2015-04-03  Giuseppe Scrivano  <gscrivan@redhat.com>

	* src/plugins/inhibit/inhibit.c (plugin_add): Support referring
	to syscalls by name.

	* src/cockroach.c (main): Invoke syscall_names_initialize.
	* src/Makefile.am (syscall_names.c.inc): Generate.
	* src/syscall_names.c: New file.

	* src/roach.h (roach_context_s): Make entering_sc an hashtable.
	(roach_get_last_sc): New function.
	* src/roach.c (roach_wait): Register new child process.
	(set_last_sc): New function.
	(roach_get_last_sc): Likewise.
	(set_entering_sc): Likewise.
	(roach_entering_sc_p): Likewise.
	(insert_pid): Likewise.
	(roach_rot_process): Register the first process.

	* src/Makefile.am (cockroach_LDADD): Fix inclusion order.
	* bootstrap.conf (gnulib_modules): Add "hash".
	* TODO: update.
